out/y.output
Grammar

    0 $accept: program $end

    1 program: statement NEWLINE program
    2        | statement
    3        | NEWLINE program

    4 $@1: %empty

    5 $@2: %empty

    6 program: BEGIN_SCOPE $@1 program END_SCOPE $@2 program
    7        | %empty

    8 statement: declaration
    9          | assignment
   10          | write
   11          | HALT

   12 declaration: VAR ID COLON TYPE

   13 assignment: ID ASSIGNMENT expression

   14 write: WRITE expression
   15      | WRITE STRING
   16      | WRITELN expression
   17      | WRITELN STRING
   18      | WRITELN

   19 expression: ROUND_OPEN expression ROUND_CLOSE
   20           | expression ADD expression
   21           | expression SUB expression
   22           | expression MUL expression
   23           | expression DIV expression
   24           | SUB expression
   25           | expression AND expression
   26           | expression OR expression
   27           | NOT expression
   28           | number
   29           | boolean
   30           | ID

   31 boolean: TRUE
   32        | FALSE

   33 number: NUM
   34       | PI
   35       | E


Terminals, with rules where they appear

$end (0) 0
error (256)
ADD (258) 20
SUB (259) 21 24
MUL (260) 22
DIV (261) 23
AND (262) 25
OR (263) 26
NOT (264) 27
NEWLINE (265) 1 3
ROUND_OPEN (266) 19
ROUND_CLOSE (267) 19
COLON (268) 12
ASSIGNMENT (269) 13
WRITE (270) 14 15
WRITELN (271) 16 17 18
HALT (272) 11
VAR (273) 12
TRUE (274) 31
FALSE (275) 32
BEGIN_SCOPE (276) 6
END_SCOPE (277) 6
TYPE (278) 12
ID (279) 12 13 30
STRING (280) 15 17
PI (281) 34
E (282) 35
NUM (283) 33
UMINUS (284)


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
program (31)
    on left: 1 2 3 6 7, on right: 0 1 3 6
$@1 (32)
    on left: 4, on right: 6
$@2 (33)
    on left: 5, on right: 6
statement (34)
    on left: 8 9 10 11, on right: 1 2
declaration (35)
    on left: 12, on right: 8
assignment (36)
    on left: 13, on right: 9
write (37)
    on left: 14 15 16 17 18, on right: 10
expression (38)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30, on right: 13 14 16
    19 20 21 22 23 24 25 26 27
boolean (39)
    on left: 31 32, on right: 29
number (40)
    on left: 33 34 35, on right: 28


State 0

    0 $accept: . program $end

    NEWLINE      shift, and go to state 1
    WRITE        shift, and go to state 2
    WRITELN      shift, and go to state 3
    HALT         shift, and go to state 4
    VAR          shift, and go to state 5
    BEGIN_SCOPE  shift, and go to state 6
    ID           shift, and go to state 7

    $default  reduce using rule 7 (program)

    program      go to state 8
    statement    go to state 9
    declaration  go to state 10
    assignment   go to state 11
    write        go to state 12


State 1

    3 program: NEWLINE . program

    NEWLINE      shift, and go to state 1
    WRITE        shift, and go to state 2
    WRITELN      shift, and go to state 3
    HALT         shift, and go to state 4
    VAR          shift, and go to state 5
    BEGIN_SCOPE  shift, and go to state 6
    ID           shift, and go to state 7

    $default  reduce using rule 7 (program)

    program      go to state 13
    statement    go to state 9
    declaration  go to state 10
    assignment   go to state 11
    write        go to state 12


State 2

   14 write: WRITE . expression
   15      | WRITE . STRING

    SUB         shift, and go to state 14
    NOT         shift, and go to state 15
    ROUND_OPEN  shift, and go to state 16
    TRUE        shift, and go to state 17
    FALSE       shift, and go to state 18
    ID          shift, and go to state 19
    STRING      shift, and go to state 20
    PI          shift, and go to state 21
    E           shift, and go to state 22
    NUM         shift, and go to state 23

    expression  go to state 24
    boolean     go to state 25
    number      go to state 26


State 3

   16 write: WRITELN . expression
   17      | WRITELN . STRING
   18      | WRITELN .

    SUB         shift, and go to state 14
    NOT         shift, and go to state 15
    ROUND_OPEN  shift, and go to state 16
    TRUE        shift, and go to state 17
    FALSE       shift, and go to state 18
    ID          shift, and go to state 19
    STRING      shift, and go to state 27
    PI          shift, and go to state 21
    E           shift, and go to state 22
    NUM         shift, and go to state 23

    $default  reduce using rule 18 (write)

    expression  go to state 28
    boolean     go to state 25
    number      go to state 26


State 4

   11 statement: HALT .

    $default  reduce using rule 11 (statement)


State 5

   12 declaration: VAR . ID COLON TYPE

    ID  shift, and go to state 29


State 6

    6 program: BEGIN_SCOPE . $@1 program END_SCOPE $@2 program

    $default  reduce using rule 4 ($@1)

    $@1  go to state 30


State 7

   13 assignment: ID . ASSIGNMENT expression

    ASSIGNMENT  shift, and go to state 31


State 8

    0 $accept: program . $end

    $end  shift, and go to state 32


State 9

    1 program: statement . NEWLINE program
    2        | statement .

    NEWLINE  shift, and go to state 33

    $default  reduce using rule 2 (program)


State 10

    8 statement: declaration .

    $default  reduce using rule 8 (statement)


State 11

    9 statement: assignment .

    $default  reduce using rule 9 (statement)


State 12

   10 statement: write .

    $default  reduce using rule 10 (statement)


State 13

    3 program: NEWLINE program .

    $default  reduce using rule 3 (program)


State 14

   24 expression: SUB . expression

    SUB         shift, and go to state 14
    NOT         shift, and go to state 15
    ROUND_OPEN  shift, and go to state 16
    TRUE        shift, and go to state 17
    FALSE       shift, and go to state 18
    ID          shift, and go to state 19
    PI          shift, and go to state 21
    E           shift, and go to state 22
    NUM         shift, and go to state 23

    expression  go to state 34
    boolean     go to state 25
    number      go to state 26


State 15

   27 expression: NOT . expression

    SUB         shift, and go to state 14
    NOT         shift, and go to state 15
    ROUND_OPEN  shift, and go to state 16
    TRUE        shift, and go to state 17
    FALSE       shift, and go to state 18
    ID          shift, and go to state 19
    PI          shift, and go to state 21
    E           shift, and go to state 22
    NUM         shift, and go to state 23

    expression  go to state 35
    boolean     go to state 25
    number      go to state 26


State 16

   19 expression: ROUND_OPEN . expression ROUND_CLOSE

    SUB         shift, and go to state 14
    NOT         shift, and go to state 15
    ROUND_OPEN  shift, and go to state 16
    TRUE        shift, and go to state 17
    FALSE       shift, and go to state 18
    ID          shift, and go to state 19
    PI          shift, and go to state 21
    E           shift, and go to state 22
    NUM         shift, and go to state 23

    expression  go to state 36
    boolean     go to state 25
    number      go to state 26


State 17

   31 boolean: TRUE .

    $default  reduce using rule 31 (boolean)


State 18

   32 boolean: FALSE .

    $default  reduce using rule 32 (boolean)


State 19

   30 expression: ID .

    $default  reduce using rule 30 (expression)


State 20

   15 write: WRITE STRING .

    $default  reduce using rule 15 (write)


State 21

   34 number: PI .

    $default  reduce using rule 34 (number)


State 22

   35 number: E .

    $default  reduce using rule 35 (number)


State 23

   33 number: NUM .

    $default  reduce using rule 33 (number)


State 24

   14 write: WRITE expression .
   20 expression: expression . ADD expression
   21           | expression . SUB expression
   22           | expression . MUL expression
   23           | expression . DIV expression
   25           | expression . AND expression
   26           | expression . OR expression

    ADD  shift, and go to state 37
    SUB  shift, and go to state 38
    MUL  shift, and go to state 39
    DIV  shift, and go to state 40
    AND  shift, and go to state 41
    OR   shift, and go to state 42

    $default  reduce using rule 14 (write)


State 25

   29 expression: boolean .

    $default  reduce using rule 29 (expression)


State 26

   28 expression: number .

    $default  reduce using rule 28 (expression)


State 27

   17 write: WRITELN STRING .

    $default  reduce using rule 17 (write)


State 28

   16 write: WRITELN expression .
   20 expression: expression . ADD expression
   21           | expression . SUB expression
   22           | expression . MUL expression
   23           | expression . DIV expression
   25           | expression . AND expression
   26           | expression . OR expression

    ADD  shift, and go to state 37
    SUB  shift, and go to state 38
    MUL  shift, and go to state 39
    DIV  shift, and go to state 40
    AND  shift, and go to state 41
    OR   shift, and go to state 42

    $default  reduce using rule 16 (write)


State 29

   12 declaration: VAR ID . COLON TYPE

    COLON  shift, and go to state 43


State 30

    6 program: BEGIN_SCOPE $@1 . program END_SCOPE $@2 program

    NEWLINE      shift, and go to state 1
    WRITE        shift, and go to state 2
    WRITELN      shift, and go to state 3
    HALT         shift, and go to state 4
    VAR          shift, and go to state 5
    BEGIN_SCOPE  shift, and go to state 6
    ID           shift, and go to state 7

    $default  reduce using rule 7 (program)

    program      go to state 44
    statement    go to state 9
    declaration  go to state 10
    assignment   go to state 11
    write        go to state 12


State 31

   13 assignment: ID ASSIGNMENT . expression

    SUB         shift, and go to state 14
    NOT         shift, and go to state 15
    ROUND_OPEN  shift, and go to state 16
    TRUE        shift, and go to state 17
    FALSE       shift, and go to state 18
    ID          shift, and go to state 19
    PI          shift, and go to state 21
    E           shift, and go to state 22
    NUM         shift, and go to state 23

    expression  go to state 45
    boolean     go to state 25
    number      go to state 26


State 32

    0 $accept: program $end .

    $default  accept


State 33

    1 program: statement NEWLINE . program

    NEWLINE      shift, and go to state 1
    WRITE        shift, and go to state 2
    WRITELN      shift, and go to state 3
    HALT         shift, and go to state 4
    VAR          shift, and go to state 5
    BEGIN_SCOPE  shift, and go to state 6
    ID           shift, and go to state 7

    $default  reduce using rule 7 (program)

    program      go to state 46
    statement    go to state 9
    declaration  go to state 10
    assignment   go to state 11
    write        go to state 12


State 34

   20 expression: expression . ADD expression
   21           | expression . SUB expression
   22           | expression . MUL expression
   23           | expression . DIV expression
   24           | SUB expression .
   25           | expression . AND expression
   26           | expression . OR expression

    $default  reduce using rule 24 (expression)


State 35

   20 expression: expression . ADD expression
   21           | expression . SUB expression
   22           | expression . MUL expression
   23           | expression . DIV expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | NOT expression .

    $default  reduce using rule 27 (expression)


State 36

   19 expression: ROUND_OPEN expression . ROUND_CLOSE
   20           | expression . ADD expression
   21           | expression . SUB expression
   22           | expression . MUL expression
   23           | expression . DIV expression
   25           | expression . AND expression
   26           | expression . OR expression

    ADD          shift, and go to state 37
    SUB          shift, and go to state 38
    MUL          shift, and go to state 39
    DIV          shift, and go to state 40
    AND          shift, and go to state 41
    OR           shift, and go to state 42
    ROUND_CLOSE  shift, and go to state 47


State 37

   20 expression: expression ADD . expression

    SUB         shift, and go to state 14
    NOT         shift, and go to state 15
    ROUND_OPEN  shift, and go to state 16
    TRUE        shift, and go to state 17
    FALSE       shift, and go to state 18
    ID          shift, and go to state 19
    PI          shift, and go to state 21
    E           shift, and go to state 22
    NUM         shift, and go to state 23

    expression  go to state 48
    boolean     go to state 25
    number      go to state 26


State 38

   21 expression: expression SUB . expression

    SUB         shift, and go to state 14
    NOT         shift, and go to state 15
    ROUND_OPEN  shift, and go to state 16
    TRUE        shift, and go to state 17
    FALSE       shift, and go to state 18
    ID          shift, and go to state 19
    PI          shift, and go to state 21
    E           shift, and go to state 22
    NUM         shift, and go to state 23

    expression  go to state 49
    boolean     go to state 25
    number      go to state 26


State 39

   22 expression: expression MUL . expression

    SUB         shift, and go to state 14
    NOT         shift, and go to state 15
    ROUND_OPEN  shift, and go to state 16
    TRUE        shift, and go to state 17
    FALSE       shift, and go to state 18
    ID          shift, and go to state 19
    PI          shift, and go to state 21
    E           shift, and go to state 22
    NUM         shift, and go to state 23

    expression  go to state 50
    boolean     go to state 25
    number      go to state 26


State 40

   23 expression: expression DIV . expression

    SUB         shift, and go to state 14
    NOT         shift, and go to state 15
    ROUND_OPEN  shift, and go to state 16
    TRUE        shift, and go to state 17
    FALSE       shift, and go to state 18
    ID          shift, and go to state 19
    PI          shift, and go to state 21
    E           shift, and go to state 22
    NUM         shift, and go to state 23

    expression  go to state 51
    boolean     go to state 25
    number      go to state 26


State 41

   25 expression: expression AND . expression

    SUB         shift, and go to state 14
    NOT         shift, and go to state 15
    ROUND_OPEN  shift, and go to state 16
    TRUE        shift, and go to state 17
    FALSE       shift, and go to state 18
    ID          shift, and go to state 19
    PI          shift, and go to state 21
    E           shift, and go to state 22
    NUM         shift, and go to state 23

    expression  go to state 52
    boolean     go to state 25
    number      go to state 26


State 42

   26 expression: expression OR . expression

    SUB         shift, and go to state 14
    NOT         shift, and go to state 15
    ROUND_OPEN  shift, and go to state 16
    TRUE        shift, and go to state 17
    FALSE       shift, and go to state 18
    ID          shift, and go to state 19
    PI          shift, and go to state 21
    E           shift, and go to state 22
    NUM         shift, and go to state 23

    expression  go to state 53
    boolean     go to state 25
    number      go to state 26


State 43

   12 declaration: VAR ID COLON . TYPE

    TYPE  shift, and go to state 54


State 44

    6 program: BEGIN_SCOPE $@1 program . END_SCOPE $@2 program

    END_SCOPE  shift, and go to state 55


State 45

   13 assignment: ID ASSIGNMENT expression .
   20 expression: expression . ADD expression
   21           | expression . SUB expression
   22           | expression . MUL expression
   23           | expression . DIV expression
   25           | expression . AND expression
   26           | expression . OR expression

    ADD  shift, and go to state 37
    SUB  shift, and go to state 38
    MUL  shift, and go to state 39
    DIV  shift, and go to state 40
    AND  shift, and go to state 41
    OR   shift, and go to state 42

    $default  reduce using rule 13 (assignment)


State 46

    1 program: statement NEWLINE program .

    $default  reduce using rule 1 (program)


State 47

   19 expression: ROUND_OPEN expression ROUND_CLOSE .

    $default  reduce using rule 19 (expression)


State 48

   20 expression: expression . ADD expression
   20           | expression ADD expression .
   21           | expression . SUB expression
   22           | expression . MUL expression
   23           | expression . DIV expression
   25           | expression . AND expression
   26           | expression . OR expression

    MUL  shift, and go to state 39
    DIV  shift, and go to state 40
    AND  shift, and go to state 41
    OR   shift, and go to state 42

    $default  reduce using rule 20 (expression)


State 49

   20 expression: expression . ADD expression
   21           | expression . SUB expression
   21           | expression SUB expression .
   22           | expression . MUL expression
   23           | expression . DIV expression
   25           | expression . AND expression
   26           | expression . OR expression

    MUL  shift, and go to state 39
    DIV  shift, and go to state 40
    AND  shift, and go to state 41
    OR   shift, and go to state 42

    $default  reduce using rule 21 (expression)


State 50

   20 expression: expression . ADD expression
   21           | expression . SUB expression
   22           | expression . MUL expression
   22           | expression MUL expression .
   23           | expression . DIV expression
   25           | expression . AND expression
   26           | expression . OR expression

    AND  shift, and go to state 41
    OR   shift, and go to state 42

    $default  reduce using rule 22 (expression)


State 51

   20 expression: expression . ADD expression
   21           | expression . SUB expression
   22           | expression . MUL expression
   23           | expression . DIV expression
   23           | expression DIV expression .
   25           | expression . AND expression
   26           | expression . OR expression

    AND  shift, and go to state 41
    OR   shift, and go to state 42

    $default  reduce using rule 23 (expression)


State 52

   20 expression: expression . ADD expression
   21           | expression . SUB expression
   22           | expression . MUL expression
   23           | expression . DIV expression
   25           | expression . AND expression
   25           | expression AND expression .
   26           | expression . OR expression

    $default  reduce using rule 25 (expression)


State 53

   20 expression: expression . ADD expression
   21           | expression . SUB expression
   22           | expression . MUL expression
   23           | expression . DIV expression
   25           | expression . AND expression
   26           | expression . OR expression
   26           | expression OR expression .

    AND  shift, and go to state 41

    $default  reduce using rule 26 (expression)


State 54

   12 declaration: VAR ID COLON TYPE .

    $default  reduce using rule 12 (declaration)


State 55

    6 program: BEGIN_SCOPE $@1 program END_SCOPE . $@2 program

    $default  reduce using rule 5 ($@2)

    $@2  go to state 56


State 56

    6 program: BEGIN_SCOPE $@1 program END_SCOPE $@2 . program

    NEWLINE      shift, and go to state 1
    WRITE        shift, and go to state 2
    WRITELN      shift, and go to state 3
    HALT         shift, and go to state 4
    VAR          shift, and go to state 5
    BEGIN_SCOPE  shift, and go to state 6
    ID           shift, and go to state 7

    $default  reduce using rule 7 (program)

    program      go to state 57
    statement    go to state 9
    declaration  go to state 10
    assignment   go to state 11
    write        go to state 12


State 57

    6 program: BEGIN_SCOPE $@1 program END_SCOPE $@2 program .

    $default  reduce using rule 6 (program)
